...
        Padding(
          padding: const EdgeInsets.only(
              top: CCSizes.defaultSpace,
              left: CCSizes.defaultSpace,
              right: CCSizes.defaultSpace),
          child: TextField(
              key: Key("DishName"),
              controller: textFieldControllers.nameTextField,
              decoration: textFieldInputDecoration(
                  hintText: 'Dish Name', prefixIcon: Icons.local_dining)),
        ),
        // ----- LOCATION TEXTFIELD ----- //
        Padding(
          padding: const EdgeInsets.only(
              top: CCSizes.defaultSpace,
              left: CCSizes.defaultSpace,
              right: CCSizes.defaultSpace),
          child: TextField(
            key: Key("Location"),
            controller: locationController.locationSearch,
            onChanged: (String value) {
              if (value.isNotEmpty) {
                locationController.selectedAddress.value = value;
              } else {
                locationController.selectedAddress.value = '';
...
        Padding(
          padding: const EdgeInsets.all(CCSizes.defaultSpace),
          child: TypeAheadField(
              controller: textFieldControllers.tagsTextField,
              builder: (context, controller, focusNode) {
                return TextField(
                    key: Key("Tags"),
                    controller: controller,
                    focusNode: focusNode,
                    decoration: textFieldInputDecoration(
                        hintText: 'Cuisines', prefixIcon: Icons.tag));
              },
              itemBuilder: (BuildContext context, String itemData) {
...
        Padding(
          padding: const EdgeInsets.only(
              top: CCSizes.defaultSpace,
              left: CCSizes.defaultSpace,
              right: CCSizes.defaultSpace),
          child: TextField(
              key: Key("Description"),
              controller: textFieldControllers.descriptionTextField,
              maxLines: null,
              decoration: textFieldInputDecoration(
                  hintText: 'Description', prefixIcon: Icons.notes)),
        ),
        // ----- RATING BAR ----- //
...
                  ratingBarController.currentRating.value = 0;
                  tagsController.selectedTags.clear();
                  textFieldControllers.tagsTextField.clear();
                }
              },
              child: Text(
                fromYourLogsPage ? 'Update' : 'Save',
                style: const TextStyle(
                    color: Colors.black, fontWeight: FontWeight.w500),
              )),
        ),
      ]),
    );
...
