...
          selectedIndex:
              controller.selectedIndex.value, //access int wrapped in Rx context
          onDestinationSelected: (index) =>
              controller.selectedIndex.value = index,

          destinations: const [
            NavigationDestination(icon: Icon(Icons.home), label: 'Home'),
            NavigationDestination(icon: Icon(Icons.book), label: 'Your Logs'),
            NavigationDestination(icon: Icon(Icons.camera_alt), label: 'Log'),
            NavigationDestination(icon: Icon(Icons.people), label: 'Social'),
            NavigationDestination(
                icon: Icon(Icons.settings), label: 'Settings'),
          ],
        ),
      ),
      body: Obx(() => controller.screens[controller.selectedIndex.value]),
    );
  }
...
