...
import 'package:firebase_auth/firebase_auth.dart';
import 'package:flutter/material.dart';

class Register extends StatefulWidget {
  final Function()? togglePageView;
  
  const Register({super.key, this.togglePageView});

  @override
  State<Register> createState() => _RegisterState();
}

class _RegisterState extends State<Register> {
...
                    key: _formKey,
                    child: Column(
                      children: <Widget>[

                        // Email TextForm Field
                        TextFormField(
                          key: const Key("EmailFieldRegister"),
                          initialValue: email,
                          decoration: textInputDecoration.copyWith(hintText: "Email"),
                          // returns null --> means is valid
                          // can validate more
                          validator: (typedEmail) => typedEmail!.isEmpty ? "Enter an email" : null,
                          onChanged: (typedEmail) {
...
                          },
                        ),

                        // Password TextFormField
                        const SizedBox(height: 10.0),
                        TextFormField(
                          key: const Key("PasswordFieldRegister"),
                          initialValue: password,
                          decoration: textInputDecoration.copyWith(hintText: "Password"),
                          obscureText: true,
                          // can validate more
                          validator: (typedPassword) => (typedPassword!.length < 6) ? "Enter a valid password\nRequirement: At least 6 characters long" : null,
                          onChanged: (typedPassword) {
                            setState(() => password = typedPassword);
                          },
                        ),
                        const SizedBox(height: 10.0),
                        TextFormField(
                          key: const Key("ConfirmPasswordFieldRegister"),
                          initialValue: passwordConfirmed,
                          decoration: textInputDecoration.copyWith(hintText: "Confirm Password"),
                          obscureText: true,
                          // can validate more
                          validator: (typedConfirmedPassword) => (typedConfirmedPassword != password) ? "Passwords do not match" : null,
                          onChanged: (typedConfirmedPassword) {
...
        elevation: 0.0, // drop shadow
        title: const Text("Register with Culinary Compass", style: TextStyle(fontSize: 18.0)),
        actions: <Widget>[
          TextButton.icon(
            icon: const Icon(Icons.person, color: Colors.black),
            label: const Text(
              "Sign In",
              style: TextStyle(color: Colors.black)), // to swap pages
            onPressed: () {
              widget.togglePageView!(); // toggle pages using function in widget itself
            },
          )
        ]
...
