...
              style: TextStyle(fontSize: 20),
            ),
            TextButton(
                onPressed: () =>
                    filtersController.selectedCuisineFilters.clear(),
                child: const Text(
                  'Clear Tags',
                  style: TextStyle(
                      color: Colors.black,
                      fontSize: 16,
                      fontWeight: FontWeight.w400),
                ))
          ]),
          // --- horizontal list of tags --- //
          Container(
            margin: const EdgeInsets.symmetric(horizontal: 10),
            height: 50,
            child: ListView(
              key: Key("FilteringListView"),
              scrollDirection: Axis.horizontal,
              children: filtersController
                  .cuisineFilters // contains all cuisines
                  .map((element) => Obx( // rebuild everytime a tag is selected to show state
                        () => Padding(
                          // padding between tags
...
                // add all selected tags for search page to rebuild search results
                filtersController.finalCuisineFilters
                    .addAll(filtersController.selectedCuisineFilters);
                Get.back(); // back to search page
              },
              style: CCElevatedTextButtonTheme.lightInputButtonStyle,
              child: const Text('Done', style: TextStyle(color: Colors.black),))
        ],
      ),
    );
  }
}

